@@ -1,0 +1,19 @@
+text:
+    NPC: Hello I am an NPC
+options:
+    - "Hi NPC, how are you":
+        text:
+            NPC: I feel nothing because I am an NPC
+    - "Where do you live?":
+        text:
+            NPC: I don't want to tell you that
+        options:
+            - "Why not?":
+                text:
+                    NPC: Never speak to me again.
+            - "You better tell me":
+                text:
+                    NPC: No.
+warpid: 001
+
+
